--- a/manifest.json
+++ b/manifest.json
@@ -15,13 +15,22 @@
   },
 
   "permissions": [
-    "tabs",
+    "declarativeContent",
     "storage",
     "http://www.mamba.ru/*"
   ],
 
-  "background":{
-    "scripts":  [ "background.js" ]
+  "page_action":{
+    "default_icon": {
+      "19": "icons/19x19.png",
+      "38": "icons/38x38.png"
+    },
+    "default_title": "__MSG_actionDefTitle__",
+    "default_popup": "popup.html"
+  },
+
+  "background": {
+    "scripts": [ "background.js" ]
   },
 
   "content_scripts": [
